# containerized-app-exercise-team2

./: README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  ml.yaml
machine-learning-client/: Emotion_recog_training.ipynb  emotion_recog.py  readme.md  readme.txt  requirements.txt
machine-learning-client/tests/: test_ml.py
web-app/: Dockerfile  app.py  mongodb.py  requirements.txt
web-app/frontend/: Dockerfile  app.py  requirements.txt
web-app/frontend/html/: index.html  login.html  main.html
web-app/frontend/tests/: serverTest.py
web-app/html/: home.html  loginFail.html  register.html
web-app/static/css/: basic.css  medium.css  mobile.css  styles.css
web-app/templates/: _home.html  advice.html  history.html  historyWeekly.html  home.html  joke.html  login.html  moodCalendar.html  poem.html  register.html
web-app/tests/: conftest.py  test_api.py  test_frontEnd.py  test_routes.py  test_tests.py
