[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project4"
description = "This is a PigLatin Translator served with cute pigs"
version = "0.0.1"
authors = [
  { name="team2", email="wc1629@nyu.edu" },
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "build", "tutorial"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/software-students-fall2022/containerized-app-exercise-team2"
"Repository" = "https://github.com/software-students-fall2022/containerized-app-exercise-team2.git"
"Bug Tracker" = "https://github.com/software-students-fall2022/containerized-app-exercise-team2/issues"

[project.scripts]
app = "app.__main__:main"